responsive header position fixed z-index edit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,6 +77,7 @@ header {
   position: relative;
   a {
     margin: 0 10px;
+    color: #fff;
     &:visited {
       color: #fff;
     }
